Added slope, drag, gravity (some errors)

--- a/PPEGProR1.vcxproj
+++ b/PPEGProR1.vcxproj
@@ -152,6 +152,7 @@
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)%(Filename)1.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)%(Filename)1.obj</ObjectFileName>
     </ClCompile>
+    <ClCompile Include="WorldObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Appearance.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="simulation.h" />
     <ClInclude Include="winApp.h" />
     <ClInclude Include="worldData.h" />
+    <ClInclude Include="worldObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
